--- a/src/Disarmingly-Simple/Views/Shared/_Layout.cshtml
+++ b/src/Disarmingly-Simple/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Disarmingly_Simple</title>
+    <title>@ViewData["Title"] - Digital_Ease</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -27,13 +27,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Disarmingly_Simple</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Digital_Ease</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Application" asp-action="Index">App</a></li>
                 </ul>
             </div>
         </div>
@@ -42,7 +43,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Disarmingly_Simple</p>
+            <p>&copy; 2017 - Digital_Ease</p>
         </footer>
     </div>
 
