--- a/src/Disarmingly-Simple/Views/_ViewImports.cshtml
+++ b/src/Disarmingly-Simple/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Disarmingly_Simple
+﻿@using Digital_Ease
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
