show results on mvc view, start code to split results arrays and add to words array.

--- a/src/Disarmingly-Simple/Views/Application/Index.cshtml
+++ b/src/Disarmingly-Simple/Views/Application/Index.cshtml
@@ -5,4 +5,11 @@
 <h3>@ViewData["Message"]</h3>
 
 
-<h1></h1>
+@if (Model.Length != 0)
+{
+    @foreach(var word in Model)
+    {
+        <p>@word</p>
+
+    }
+}
