add loading gif to page, so that the user knows the site is processing

--- a/src/Disarmingly-Simple/Views/Application/Index.cshtml
+++ b/src/Disarmingly-Simple/Views/Application/Index.cshtml
@@ -102,6 +102,9 @@
     #getTextHelp{
         display: none;
     }
+    #loadingGif{
+        display: none;
+    }
 </style>
 
 
@@ -115,6 +118,7 @@
 </div>
 
 <div id="getTextTime"><p>CLICK THIS BROH, ITS TIME FOR SOME TEXT</p></div>
+<img id="loadingGif" src="~/images/loadingGif.gif" />
 <div id="textOutputResult"></div>
 
 
