--- a/src/Disarmingly-Simple/Views/Application/Index.cshtml
+++ b/src/Disarmingly-Simple/Views/Application/Index.cshtml
@@ -117,7 +117,7 @@
     <a id="save" href="#"><img src="~/images/save.svg"></a>
 </div>
 
-<div id="getTextTime"><p>CLICK THIS BROH, ITS TIME FOR SOME TEXT</p></div>
+<div id="getTextTime"><button>CLICK THIS BROH, ITS TIME FOR SOME TEXT</button></div>
 <img id="loadingGif" src="~/images/loadingGif.gif" />
 <div id="textOutputResult"></div>
 
