--- a/src/Disarmingly-Simple/Views/Application/Index.cshtml
+++ b/src/Disarmingly-Simple/Views/Application/Index.cshtml
@@ -7,31 +7,6 @@
 <h2>@ViewData["Title"]</h2>
 <h3 id="getAudioHelp">@ViewData["RecordingHelp"]</h3>
 <h3 id="getTextHelp">@ViewData["SpeechToTextHelp"]</h3>
-<script>
-    //function hasGetUserMedia() {
-    //    return !!(navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia);
-    //}
-    //if (hasGetUserMedia()) {
-    //    console.log("has getUserMedia");
-    //}
-    //else {
-    //    alert("getUserMedia is not supported in this browser");
-    //}
-    //var errorCallback = function (e) {
-    //    console.log("FAILURE TO COMMUNICATE, EJECT/ABORT/OHHHHNOOOO", e);
-    //};
-    //navigator.getUserMedia({ audio: true }, function (stream) {
-    //    var microphone = context.createMediaStreamSource(stream);
-    //    var filter = context.createBiquadFilter();
-
-    //    // microphone -> filter -> destination.
-    //    microphone.connect(filter);
-    //    filter.connect(context.destination);
-    //}, errorCallback);
-    
-
-</script>
-
 
 <script src="~/js/audioDisplay.js"></script>
 <script src="~/js/recorderjs/recorder.js"></script>
@@ -49,6 +24,7 @@
         height: 100vh;
         width: 100%;
         margin: 0 0;
+        z-index: 1;
     }
 
     canvas {
@@ -72,12 +48,12 @@
         height: 15vh;
     }
 
-        #record.recording {
-            background: red;
-            background: -webkit-radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
-            background: -moz-radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
-            background: radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
-        }
+    #record.recording {
+        background: red;
+        background: -webkit-radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
+        background: -moz-radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
+        background: radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
+    }
 
     #save, #save img {
         height: 10vh;
@@ -87,9 +63,9 @@
         opacity: 0.25;
     }
 
-        #save[download] {
-            opacity: 1;
-        }
+    #save[download] {
+        opacity: 1;
+    }
 
     #viz {
         height: 80%;
@@ -104,10 +80,25 @@
     }
     #loadingGif{
         display: none;
+        z-index: 10;
+        float: left;
+        clear: both;
+        position: absolute;
+        top: 40%;
+        left: 40%;
+    }
+    #showRecording{
+        display: none;
+    }
+    .green {
+        background-color: green;
+    }
+    #getTextTime{
+        display: none;
     }
 </style>
 
-
+<div id="showRecording"><button>Show Recording Section</button></div>
 <div id="viz">
     <canvas id="analyser" width="1024" height="500"></canvas>
     <canvas id="wavedisplay" width="1024" height="500"></canvas>
@@ -117,7 +108,7 @@
     <a id="save" href="#"><img src="~/images/save.svg"></a>
 </div>
 
-<div id="getTextTime"><button>CLICK THIS BROH, ITS TIME FOR SOME TEXT</button></div>
+<div id="getTextTime"><button>CLICK THIS BROH, <br />ITS TIME FOR SOME TEXT</button></div>
 <img id="loadingGif" src="~/images/loadingGif.gif" />
 <div id="textOutputResult"></div>
 
