--- a/src/Disarmingly-Simple/Views/Application/TextOutput.cshtml
+++ b/src/Disarmingly-Simple/Views/Application/TextOutput.cshtml
@@ -8,8 +8,8 @@
     }
     else
     { 
-        @Html.Raw(Model[0])
-        <p>Input: @Model[1]</p>
+        <h3>Input: @Model[1]</h3>
+        <div id="raw">@Html.Raw(Model[0])</div>
     }
 </div>
 
