--- a/src/Disarmingly-Simple/Views/Application/Index.cshtml
+++ b/src/Disarmingly-Simple/Views/Application/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <h2>@ViewData["Title"]</h2>
 <h3 id="getAudioHelp">@ViewData["RecordingHelp"]</h3>
-<h3 id="getTextHelp">"Click on the parse button to see what IBM's Watson&trade; thinks you said, and if it will change something about the website. Click the record button to go back and record another audio track."</h3>
+<h3 id="getTextHelp">Click on the parse button to see what IBM's Watson&trade; thinks you said, and if it will change something about the website. Click the record button to go back and record another audio track.</h3>
 <script src="~/js/audioDisplay.js"></script>
 <script src="~/js/recorderjs/recorder.js"></script>
 <script src="~/js/receiveAudio.js"></script>
@@ -47,13 +47,14 @@
 
     #record {
         height: 15vh;
+        border-radius: 50%;
     }
 
     #record.recording {
-        background: red;
-        background: -webkit-radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
-        background: -moz-radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
-        background: radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
+        background: -moz-radial-gradient(center, ellipse cover, rgba(178,69,69,1) 0%, rgba(219,162,162,0.55) 100%); /* FF3.6-15 */
+background: -webkit-radial-gradient(center, ellipse cover, rgba(178,69,69,1) 0%,rgba(219,162,162,0.55) 100%); /* Chrome10-25,Safari5.1-6 */
+background: radial-gradient(ellipse at center, rgba(178,69,69,1) 0%,rgba(219,162,162,0.55) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b24545', endColorstr='#8cdba2a2',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     }
 
     #save, #save img {
@@ -111,12 +112,14 @@
         width: 175px;
     }
     #textOutputResult{
-        width: inherit;
+        display: none;
+        width: 60%;
         padding: 0;
         margin: 0;
+        clear: both;
         position: absolute;
         top: 450px;
-        left: 30%;
+        left: 20%;
         text-align:center;
     }
     button{
