--- a/src/Disarmingly-Simple/Views/Application/Index.cshtml
+++ b/src/Disarmingly-Simple/Views/Application/Index.cshtml
@@ -161,3 +161,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b24545', end
     <div id="textOutputResult"></div>
 </div>
 
+@*<form action="/" method="post">
+    <label for="">label</label>
+    <input type="number" name="name" value="" />
+</form>*@
